# rust-bitcoincore-rpc

./: README.md
.github/workflows/: rust.yml
client/: Cargo.toml
client/examples/: test_against_node.rs
client/src/: client.rs  error.rs  jsonrpc_error.rs  lib.rs  transport.rs
contrib/: test.sh
integration_test/: Cargo.toml
integration_test/src/: main.rs
json/: Cargo.toml
json/src/: lib.rs
