[package]
name = "bitcoincore-rpc"
version = "0.18.0"
authors = [
    "Steven Roose <steven@stevenroose.org>",
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Dawid Ciężarkiewicz <dpc@dpc.pw>",
]
license = "CC0-1.0"
homepage = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc/"
repository = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc/"
description = "RPC client library for the Bitcoin Core JSON-RPC API."
keywords = ["crypto", "bitcoin", "bitcoin-core", "rpc"]
readme = "README.md"
edition = "2021"

[lib]
name = "bitcoincore_rpc"
path = "src/lib.rs"

[dependencies]
bitcoincore-rpc-json = { version = "0.18.0", path = "../json" }

log = "0.4.5"
jsonrpc-async = "2.0.2"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1.42"
url = "2.5.1"

# Used for deserialization of JSON.
serde = "1"
serde_json = { version = "1" }

[dev-dependencies]
tempfile = "3.3.0"
tokio.workspace = true

[[example]]
name = "retry_client"

