[package]
name = "integration_test"
version = "0.1.0"
authors = ["Steven Roose <steven@stevenroose.org>"]
edition = "2021"

[dependencies]
bitcoincore-rpc = { path = "../client" }
bitcoin = { version = "0.32.2", features = ["serde", "rand", "rand-std"]}
lazy_static = "1.4.0"
log = "0.4"
tokio = { version = "1", features = ["full"] }
